@@ -74,6 +74,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 8/30:</DIV>
+ HW2 is now posted; it will be due on Wednesday due to the Labor Day holiday.  Solutions to HW1 will be available tomorrow after class.
+<li>
 <DIV class="updated">Posted 8/29:</DIV>
  The next homework set will be posted on Tuesday, along with the solutions to HW1.
 <li>
@@ -105,7 +108,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TD class="date">8/29
 <TD class="topic">Special Relativity	<TD class="chapter">2
 
-<TD class="homework">&nbsp;
+<TD class="homework"><A HREF="Repository/HW2.pdf">HW2</A>
 	<BR>&nbsp;
 	<TD class="quiz">&nbsp;
 	<BR>&nbsp;
